# Companies-Vacancies

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py  database.ini.example
src/: hh_api.py  hh_companies.py  hh_vacancies.py  utils.py
src/db/: db_creator.py  db_manager.py  db_saver.py
src/hh/: hh_api.py  hh_companies.py  hh_vacancies.py
